@@ -840,9 +840,9 @@ compact_chert(Xapian::Compactor & compactor,
 	    s += t->name;
 	    s += '.';
 
-	    struct stat sb;
-	    if (stat((s + "DB").c_str(), &sb) == 0) {
-		in_size += sb.st_size / 1024;
+	    off_t db_size = file_size(s + "DB");
+	    if (errno == 0) {
+		in_size += db_size / 1024;
 		output_will_exist = true;
 		++inputs_present;
 	    } else if (errno != ENOENT) {
@@ -912,9 +912,9 @@ compact_chert(Xapian::Compactor & compactor,
 
 	off_t out_size = 0;
 	if (!bad_stat) {
-	    struct stat sb;
-	    if (stat((dest + "DB").c_str(), &sb) == 0) {
-		out_size = sb.st_size / 1024;
+	    off_t db_size = file_size(dest + "DB");
+	    if (errno == 0) {
+		out_size = db_size / 1024;
 	    } else {
 		bad_stat = (errno != ENOENT);
 	    }
