@@ -1,3 +1,11 @@
+Mon Apr 23 03:40:35 GMT 2012  Olly Betts <olly@survex.com>
+
+	* common/filetests.h: Add new function file_size() to get the size
+	  of a file from a path or file descriptor.
+	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc,
+	  net/remoteconnection.cc,tests/api_replicate.cc: Use this new
+	  function.
+
 Wed Apr 18 01:35:21 GMT 2012  Olly Betts <olly@survex.com>
 
 	* weight/bm25weight.cc,weight/tradweight.cc: Fix comment typo.
